--- a/02_svd_and_matrix_theory.ipynb
+++ b/02_svd_and_matrix_theory.ipynb
@@ -16,7 +16,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 2,
       "metadata": {
         "id": "zwzUKhqHkxVg"
       },
@@ -351,7 +351,7 @@
       "metadata": {
         "id": "zzIvEUpubB9P"
       },
-      "execution_count": 11,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -392,7 +392,7 @@
       "metadata": {
         "id": "Fk6f19ZFgLTq"
       },
-      "execution_count": 12,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -419,19 +419,19 @@
           "height": 453
         },
         "id": "dkbwklPHrxyI",
-        "outputId": "f8c78d7b-70c4-451b-cf09-4b7754a83129"
+        "outputId": "b599319b-94b2-4d67-e937-4759829e6f25"
       },
-      "execution_count": 13,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.image.AxesImage at 0x788bd8c21110>"
+              "<matplotlib.image.AxesImage at 0x7e0e1dc20e50>"
             ]
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 5
         },
         {
           "output_type": "display_data",
@@ -464,9 +464,9 @@
           "height": 469
         },
         "id": "J9VtXKkpueyG",
-        "outputId": "3e0ca152-e208-4ec8-bc23-38a0df5a1db7"
+        "outputId": "84733fae-fbae-4072-8d05-e6d3f98f85bc"
       },
-      "execution_count": 14,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -476,7 +476,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 14
+          "execution_count": 6
         },
         {
           "output_type": "display_data",
@@ -506,19 +506,19 @@
           "height": 453
         },
         "id": "2XtkoSQvyLkf",
-        "outputId": "af006d58-242d-4020-892f-f33cc48c7423"
+        "outputId": "008b267f-0f75-4a6a-e2d3-bda7baacbc10"
       },
-      "execution_count": 15,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.image.AxesImage at 0x788bd95d1110>"
+              "<matplotlib.image.AxesImage at 0x7e0e0d88ae10>"
             ]
           },
           "metadata": {},
-          "execution_count": 15
+          "execution_count": 7
         },
         {
           "output_type": "display_data",
@@ -551,33 +551,33 @@
         "# Calculo la norma 2 de A; y la norma de la diferencia entre A y A_20\n",
         "\n",
         "val_sing_max_A = S[0]\n",
-        "print('La norma 2 de la matriz es ' + str(np.linalg.norm(imgGray)) + ' la cual, en aritmética exacta, equivale a su mayor valor singular: ≈ ' + str(val_sing_max_A))\n",
+        "print('La norma 2 de la matriz es ' + str(np.linalg.norm(imgGray, 2)) + ' la cual equivale a su mayor valor singular: ' + str(val_sing_max_A))\n",
         "val_sing_21_A20 = S[20]\n",
-        "print('La norma 2 de la matriz truncada de rango 20 de A es ' + str(np.linalg.norm(A_20)) + ' la cual, en aritmética exacta, equivale a la norma dos de A (pues poseen mismo valor singular máximo)' + '\\n')\n",
-        "print('La norma 2 de la diferencia entre la matriz original y la matriz truncada de rango 20 es ' +  str(np.linalg.norm(imgGray - A_20)) + '\\nLa cual, en aritmética exacta, equivale al vigésimo primer valor singular de A : ≈ ' + str(val_sing_21_A20) + '\\n')\n",
-        "print('La calidad de la aproximación es analizable desde el error relativo de la norma de la diferencia entre la matriz A y A_20 = ' + str(np.linalg.norm(imgGray - A_20)/np.linalg.norm(imgGray)) + '\\nO, equivalentemente, al vigésimo primer valor singular sobre el mayor valor singular ≈ ' +str((val_sing_21_A20)/val_sing_max_A))"
+        "print('La norma 2 de la matriz truncada de rango 20 de A es ' + str(np.linalg.norm(A_20, 2)) + ' la cual equivale a la norma dos de A (pues poseen mismo valor singular máximo)' + '\\n')\n",
+        "print('La norma 2 de la diferencia entre la matriz original y la matriz truncada de rango 20 es ' +  str(np.linalg.norm(imgGray - A_20, 2)) + '\\nLa cual equivale al vigésimo primer valor singular de A : ' + str(val_sing_21_A20) + '\\n')\n",
+        "print('La calidad de la aproximación es analizable desde el error relativo de la norma de la diferencia entre la matriz A y A_20 = ' + str(np.linalg.norm(imgGray - A_20, 2)/np.linalg.norm(imgGray, 2)) + '\\nO, equivalentemente, al vigésimo primer valor singular sobre el mayor valor singular: ' +str((val_sing_21_A20)/val_sing_max_A))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "MM0-zSXix5PK",
-        "outputId": "b69597d8-00ab-4045-c76c-3cf7f22493cf"
+        "outputId": "4945d4c8-00b2-4a5b-fb8a-e6b002ae1ed5"
       },
-      "execution_count": 40,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "La norma 2 de la matriz es 297.8169630588457 la cual, en aritmética exacta, equivale a su mayor valor singular: ≈ 291.49694060377004\n",
-            "La norma 2 de la matriz truncada de rango 20 de A es 297.6068021826745 la cual, en aritmética exacta, equivale a la norma dos de A (pues poseen mismo valor singular máximo)\n",
+            "La norma 2 de la matriz es 291.49694060377004 la cual equivale a su mayor valor singular: 291.49694060377004\n",
+            "La norma 2 de la matriz truncada de rango 20 de A es 291.49694060377016 la cual equivale a la norma dos de A (pues poseen mismo valor singular máximo)\n",
             "\n",
-            "La norma 2 de la diferencia entre la matriz original y la matriz truncada de rango 20 es 11.186365817314341\n",
-            "La cual, en aritmética exacta, equivale al vigésimo primer valor singular de A : ≈ 3.551481202541489\n",
+            "La norma 2 de la diferencia entre la matriz original y la matriz truncada de rango 20 es 3.551481202541489\n",
+            "La cual equivale al vigésimo primer valor singular de A : 3.551481202541489\n",
             "\n",
-            "La calidad de la aproximación es analizable desde el error relativo de la norma de la diferencia entre la matriz A y A_20 = 0.03756121109563536\n",
-            "O, equivalentemente, al vigésimo primer valor singular sobre el mayor valor singular ≈ 0.012183596833590767\n"
+            "La calidad de la aproximación es analizable desde el error relativo de la norma de la diferencia entre la matriz A y A_20 = 0.012183596833590767\n",
+            "O, equivalentemente, al vigésimo primer valor singular sobre el mayor valor singular: 0.012183596833590767\n"
           ]
         }
       ]
@@ -604,19 +604,19 @@
           "height": 453
         },
         "id": "3o5pqd_44DMf",
-        "outputId": "fb1a9ff4-11b1-4446-bc68-b820c12ab7fc"
+        "outputId": "117d9b7d-b6e6-4196-c3cd-0288ee11fbb0"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.image.AxesImage at 0x788bd8b21910>"
+              "<matplotlib.image.AxesImage at 0x7e0e0d8b9750>"
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 13
         },
         {
           "output_type": "display_data",
@@ -657,19 +657,19 @@
           "height": 453
         },
         "id": "LNntbmXO8kuH",
-        "outputId": "c558d42d-027c-4a8f-eaf3-cfc9a81435f0"
+        "outputId": "62d3ad15-129a-4387-8f2e-e08de8a0ab79"
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.image.AxesImage at 0x788bd8b5e190>"
+              "<matplotlib.image.AxesImage at 0x7e0e0cc39850>"
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 14
         },
         {
           "output_type": "display_data",
